--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "leerob.io",
+  "name": "magiobus.com",
   "description": "My personal website.",
   "version": "0.0.0",
   "author": {
-    "name": "Lee Robinson",
-    "email": "me@leerob.io",
-    "url": "https://leerob.io"
+    "name": "Magio Bustillos",
+    "email": "magio@magiobus.com",
+    "url": "https://magiobus.com"
   },
   "license": "MIT",
   "repository": {
